# cjm-media-plugin-lavasr

./: .gitignore  README.md  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_media_plugin_lavasr/: _modidx.py  meta.py  plugin.py
nbs/: index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: __init__.py  test_lavasr_plugin.py  test_lavasr_plugin_system.py  test_reconfigure.py  validate_lavasr_e2e.py
